apps/storybook/config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: datum-storybook
    app.kubernetes.io/name: datum-storybook
    app.kubernetes.io/version: 1.0.0
  name: datum-storybook
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: datum-storybook
      app.kubernetes.io/name: datum-storybook
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: datum-storybook
        app.kubernetes.io/name: datum-storybook
    spec:
      containers:
        - name: datum-storybook
          image: ghcr.io/datum-cloud/datum-storybook:0.0.0-placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 10
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
