apps/storybook/config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: datum-storybook
    app.kubernetes.io/name: datum-storybook
    app.kubernetes.io/version: 1.0.0
  name: datum-storybook
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: datum-storybook
    app.kubernetes.io/name: datum-storybook
  sessionAffinity: None
  type: ClusterIP
