apps/storybook/config/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: datum-storybook
spec:
  parentRefs:
    # This should be overridden at the environment level if needed to configure
    # which gateway should be used to expose storybook outside of the cluster.
    - name: external
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Content-Type-Options
                value: nosniff
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Frame-Options
                value: DENY
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
              - name: Cross-Origin-Opener-Policy
                value: same-origin
              - name: Content-Security-Policy
                value: "default-src 'self' 'unsafe-inline' https: data: blob:;"
      backendRefs:
        - name: datum-storybook
          kind: Service
          group: ''
          port: 80
